build: add missing mediatR, sqldatabase, applogger abstraction

--- a/CqrsDemo/CqrsDemo.csproj
+++ b/CqrsDemo/CqrsDemo.csproj
@@ -7,6 +7,15 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Database\MainDbContext.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="Database\MainDbContext.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="MediatR" Version="9.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="5.0.0">
