refactor: re-organize database context, add mappings, update project

--- a/CqrsDemo/CqrsDemo.csproj
+++ b/CqrsDemo/CqrsDemo.csproj
@@ -36,5 +36,9 @@
     </EmbeddedResource>
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Infrastructure\Database\Seeders\" />
+  </ItemGroup>
+
 
 </Project>
