--- a/Tests/CqrsDemo.UnitTests/CqrsDemo.UnitTests.csproj
+++ b/Tests/CqrsDemo.UnitTests/CqrsDemo.UnitTests.csproj
@@ -23,7 +23,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\CqrsDemo\CqrsDemo.csproj" />
+    <ProjectReference Include="..\..\CqrsDemo\CqrsDemo.csproj" />
   </ItemGroup>
 
 </Project>
