--- a/CqrsDemo/CqrsDemo.csproj
+++ b/CqrsDemo/CqrsDemo.csproj
@@ -1,9 +1,9 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
-    <UserSecretsId>8b6e4f7f-5aef-4403-9199-bfdd9a7b7c3e</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+    <UserSecretsId>f8f27180-32aa-4c21-9a5a-02722958ac73</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
